--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -178,7 +178,7 @@ jobs:
       - name: Install Meson
         run: pip install meson ninja
       - name: Configure project
-        run: meson build --force-fallback-for=zlib -Denable_webextension=false # TODO Make it works on Windows
+        run: meson build --force-fallback-for=zlib -Denable_webextension=false -Dcpp_link_args=-static -Dc_link_args=-static # TODO Make it works on Windows
       - name: Build project
         run: ninja -C build
       - name: Generate MSI
