Enabled Microsoft's SChannel and Apple's Secure Transport in libcurl

--- a/meson.build
+++ b/meson.build
@@ -103,7 +103,6 @@ if enable_native_progs
 	if not dep_curl.found()
 		cmake = import('cmake')
 		subproj_opts_curl = cmake.subproject_options()
-		# FIXME Disable libssh2 from build
 		subproj_opts_curl.add_cmake_defines({
 			'BUILD_CURL_EXE': false,
 			'BUILD_SHARED_LIBS': false,
@@ -118,9 +117,24 @@ if enable_native_progs
 			'HTTP_ONLY': true,
 			'SSL_ENABLED': true,
 		})
+		dep_curl = []
+		if host_machine.system() == 'windows'
+			subproj_opts_curl.add_cmake_defines({
+				'CMAKE_USE_SCHANNEL': true,
+			})
+			dep_curl += cpp.find_library('advapi32')
+			dep_curl += cpp.find_library('crypt32')
+		elif host_machine.system() == 'darwin'
+			subproj_opts_curl.add_cmake_defines({
+				'CMAKE_USE_SECTRANSP': true,
+			})
+			dep_curl += cpp.find_library('CoreFoundation')
+			dep_curl += cpp.find_library('Security')
+		endif
 		subproj_opts_curl.set_install(false)
 		subproj_curl = cmake.subproject('libcurl', options: subproj_opts_curl)
-		dep_curl = subproj_curl.dependency('libcurl')
+		dep_curl_cmake = subproj_curl.dependency('libcurl')
+		dep_curl = declare_dependency(dependencies: [dep_curl_cmake,dep_curl], version: dep_curl_cmake.version())
 	endif
 	
 	if (host_machine.system() == 'windows') and (meson.get_compiler('c').get_id() == 'gcc')
