--- a/packaging/meson.build
+++ b/packaging/meson.build
@@ -55,10 +55,10 @@ if enable_native_progs
 		'INIReader': not dep_inih_static,
 		
 		'freetype2': dep_freetype2.type_name() != 'internal',
-		'libjpeg': dep_libjpeg.type_name() != 'internal',
-		'libpng': dep_libpng.type_name() != 'internal',
-		'libtiff-4': dep_libtiff.type_name() != 'internal',
-		'zlib': dep_zlib.type_name() != 'internal',
+		'libjpeg': dependency('libjpeg').type_name() != 'internal',
+		'libpng': dependency('libpng').type_name() != 'internal',
+		'libtiff-4': dependency('libtiff-4').type_name() != 'internal',
+		'zlib': dependency('zlib').type_name() != 'internal',
 	}, section: 'Using system dependency (NO if embeded)', bool_yn: true)
 endif
 
