[desktop-app] Moved and splitted GUI main in gui/main.cpp
	This enable fancy tricks, some testings of the GUI and platform specific main-loop changes.

--- a/desktop-app/meson.build
+++ b/desktop-app/meson.build
@@ -23,6 +23,7 @@ deskapp_srcs = [
 	'gui/artwork-viewport.cpp',
 	'gui/first-run.cpp',
 	'gui/font.cpp',
+	'gui/main.cpp',
 	'gui/menu.cpp',
 	'gui/modal.cpp',
 	'gui/rating-selector.cpp',
