--- a/subprojects/.gitignore
+++ b/subprojects/.gitignore
@@ -1,14 +1,19 @@
 curl-*
+fmt-8.0.1
 freetype-*
+Imath-3.0.5
 inih-r53
 libjpeg-*
 libpng-*
-tiff-*
+mingw-std-threads-1.0.0
+oiio-2.2.16.0
 packagecache
 rapidjson-*
 robin-map-0.6.3
 roboto-*
 SDL2-*
+SDL2_image-2.0.5
 SDL2_ttf-*
 sqlite-amalgamation-*
+tiff-*
 zlib-*
