--- a/subprojects/packagefiles/oiio-2.2.16.0/src/jpeg.imageio/meson.build
+++ b/subprojects/packagefiles/oiio-2.2.16.0/src/jpeg.imageio/meson.build
@@ -1,4 +1,5 @@
 dep_jpeg = dependency('libjpeg', required: get_option('enable_jpeg'))
+summary('jpeg', dep_jpeg.found(), bool_yn: true, section: 'ImageIO plugins')
 if dep_jpeg.found()
 	oiio_plugins += declare_dependency(sources: files('jpeginput.cpp','jpegoutput.cpp'), dependencies: dep_jpeg)
 else
