--- a/subprojects/packagefiles/oiio-2.2.16.0/src/jpeg2000.imageio/meson.build
+++ b/subprojects/packagefiles/oiio-2.2.16.0/src/jpeg2000.imageio/meson.build
@@ -1,4 +1,5 @@
 dep_openjpg2 = dependency('libopenjp2', required: get_option('enable_jpeg2000'))
+summary('jpeg2000', dep_openjpg2.found(), bool_yn: true, section: 'ImageIO plugins')
 if dep_openjpg2.found()
 	oiio_plugins += declare_dependency(sources: files('jpeg2000input.cpp','jpeg2000input.cpp'), dependencies: dep_openjpg2, compile_args: '-DUSE_OPENJPEG=1')
 else
