--- a/subprojects/packagefiles/oiio-2.2.16.0/src/png.imageio/meson.build
+++ b/subprojects/packagefiles/oiio-2.2.16.0/src/png.imageio/meson.build
@@ -1,4 +1,5 @@
 dep_png = dependency('libpng', required: get_option('enable_png'))
+summary('png', dep_png.found(), bool_yn: true, section: 'ImageIO plugins')
 if dep_png.found()
 	oiio_plugins += declare_dependency(sources: files('pnginput.cpp','pngoutput.cpp'), dependencies: dep_png)
 else
