--- a/subprojects/packagefiles/oiio-2.2.16.0/src/bmp.imageio/meson.build
+++ b/subprojects/packagefiles/oiio-2.2.16.0/src/bmp.imageio/meson.build
@@ -1,5 +1,7 @@
 if not get_option('enable_bmp').disabled()
 	oiio_plugins += declare_dependency(sources: files('bmpinput.cpp','bmpoutput.cpp','bmp_pvt.cpp'))
+	summary('bmp', true, bool_yn: true, section: 'ImageIO plugins')
 else
 	oiio_plugins += declare_dependency(compile_args: '-DDISABLE_BMP=1')
+	summary('bmp', false, bool_yn: true, section: 'ImageIO plugins')
 endif
