--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,8 +85,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Update apt cache
         run: sudo apt update
-      - name: Install SDL2 and, his ttf module, OIIO, Boost, libcurl, Python3 setuptools and lintian
-        run: sudo apt install libsdl2-dev libsdl2-ttf-dev libopenimageio-dev libboost-all-dev libcurl4-openssl-dev python3-setuptools lintian
+      - name: Install dependencies and tools
+        run: sudo apt install libsdl2-dev libsdl2-ttf-dev libopenimageio-dev libboost-all-dev libcurl4-openssl-dev libdbus-1-dev liblcms2-dev python3-setuptools lintian
       - name: Install Meson and Ninja using pip3
         run: sudo pip3 install meson==0.57.1 ninja
       - name: Install Mozilla's web-ext with npm
